fix scroll interaction on ios

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -32,18 +32,10 @@ body {
 html,
 body,
 #app {
-    height: 100vh;
-    width: 100vw;
-    padding: 0;
-    margin: 0;
     font-family: "Inter", sans-serif;
-    // color: vars.$color-primary-1;
+    height: 100%;
 }
-#app {
-    overflow: auto;
-    position: relative;
-    z-index: 1;
-}
+
 main {
     width: 100%;
     box-sizing: border-box;
@@ -228,4 +220,14 @@ button.btn {
     html {
         height: -webkit-fill-available;
     }
+}
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
 }
